src/assets/sass/main.scss
@import 'libs/vars';
@import 'libs/functions';
@import 'libs/mixins';
@import 'libs/vendor';
@import 'libs/breakpoints';
@import 'libs/html-grid';
@import 'font-awesome.min.css';
@import url('https://fonts.googleapis.com/css?family=Raleway:200,700|Source+Sans+Pro:300,600,300italic,600italic');

/*
	Solid State by HTML5 UP
	html5up.net | @ajlkn
	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
*/

// Breakpoints.

@include breakpoints(
  (
    xlarge: (
      1281px,
      1680px,
    ),
    large: (
      981px,
      1280px,
    ),
    medium: (
      737px,
      980px,
    ),
    small: (
      481px,
      736px,
    ),
    xsmall: (
      361px,
      480px,
    ),
    xxsmall: (
      null,
      360px,
    ),
  )
);

// Base.

@import 'base/reset';
@import 'base/page';
@import 'base/typography';

// Component.

@import 'components/row';
@import 'components/section';
@import 'components/form';
@import 'components/box';
@import 'components/icon';
@import 'components/image';
@import 'components/list';
@import 'components/actions';
@import 'components/icons';
@import 'components/contact';
@import 'components/pagination';
@import 'components/table';
@import 'components/button';
@import 'components/features';

// Layout.

@import 'layout/header';
@import 'layout/banner';
@import 'layout/wrapper';
@import 'layout/footer';
@import 'layout/menu';

body {
  margin: 0;
  padding: 0;
  overflow-x: hidden;
}


.team-page {
  .section-header {
    margin-top: 2em;
    text-align: left;
    font-size: 36px;

    @include breakpoint(small) {
      font-size: 32px;
    }

    @include breakpoint(xsmall) {
      font-size: 24px;
    }
  }


  .grid-section {
    display: flex;
    flex-wrap: wrap; 
    justify-content: left; 
    gap: 20px; 
    margin: auto;
    
    @include breakpoint(small) {
      gap: 15px;
    }

    @include breakpoint(xsmall) {
      gap: 15px;
    }
  }

  .grid-item {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    width: calc(25% - 20px); 

    @include breakpoint(large) {
      width: calc(33.33% - 20px); 
    }

    @include breakpoint(medium) {
      width: calc(33.33% - 15px); 
    }

    @include breakpoint(small) {
      width: calc(50% - 15px); 
    }

    @include breakpoint(xsmall) {
      width: calc(50% - 15px); 
    }
  }

  .grid-item img {
    width: 100%;
    height: auto;
    object-fit: cover;
    border-radius: 4px;
  }
  
  .leader, .member {
    margin-top: 10px;
    font-size: 16px;
    font-weight: 600;
    margin-bottom: 5px; 

    @include breakpoint(medium) {
      font-size: 12px;
      line-height: 1.3;
    }

    @include breakpoint(small) {
      font-size: 11px;
      line-height: 1.4;
    }

    @include breakpoint(xxsmall) {
      font-size: 12px;
    }
  }

  .position {
    font-size: 14px;
    color: rgb(214, 214, 214);

    @include breakpoint(medium) {
      font-size: 12px;
    }

    @include breakpoint(small) {
      font-size: 11px;
    }

    @include breakpoint(xxsmall) {
      font-size: 10px;
    }
  }

  .image-container {
    position: relative;
    width: 100%;
    height: auto;
    overflow: hidden;
    border-radius: 4px;
  }

  .image-container img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
  }

  .hover-description {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.7);
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    opacity: 0;
    transition: opacity 0.3s ease-in-out;
    padding: 10px;
    box-sizing: border-box;
    text-align: left;
    font-size: 14px;
    line-height: 1.5;
    visibility: hidden;
    border-radius: 4px;
  }

  .grid-item:hover .hover-description {
    opacity: 1;
    visibility: visible;
  }

  .grid-item:hover img {
    opacity: 0.3;
    transform: scale(1.05);
  }

  /* Disable hover for alum */
  .grid-section.alumni .grid-item:hover .hover-description {
    opacity: 0;
    visibility: hidden;
  }
  
  .grid-section.alumni .grid-item:hover img {
    opacity: 1;
    transform: none;
  }
  
  .apply-button {
    background-color: #6a181e; 
    border: none;
  }
  .apply-button:hover {
    background-color: #7b1c23; 
  }
}

